stylesheet.css
body {
    height: 100%;
    padding: 30px;
    font-family: 'Lato', sans-serif;
    text-align: center;
}

input[type="button"]{ -webkit-appearance: none; }

h1 {
    font-size: 30px;
    color: #cb99c5; 
     text-align: center;
}

h2 {
    font-size: 22px;
    color: rgb(177, 177, 177);
    text-align: center;
}

div {
    margin: auto;
   text-align: center;
   display: inline-block;
}

p {
    text-align: center;
}

.center
{
     margin: 0 auto;
}

.buttons {
    -webkit-appearance: none; 
    position: relative;
	display: inline-block;
	font-size: 22px;
	padding: 20px 60px 20px 60px;
	color: white;
	margin: 20px 10px 20px 10px;
	border-radius: 6px;
	text-align: center;
	transition: top .01s linear;
	text-shadow: 0 1px 0 rgba(0,0,0,0.15);
    background-color: #cb99c5;
    text-decoration: none;
    outline:0;
	box-shadow: 0 0 0 1px #cb99c5 inset,
				0 0 0 2px rgba(255,255,255,0.15) inset,
				0 8px 0 0 rgba(189, 142, 183, .7),
				0 8px 0 1px rgba(0,0,0,.4),
				0 8px 8px 1px rgba(0,0,0,0.5);
}
.buttons:active {
    -webkit-appearance: none; 
	box-shadow: 0 0 0 1px #cb99c5 inset,
				0 0 0 2px rgba(255,255,255,0.15) inset,
                0 0 0 1px rgba(0,0,0,0.4);
    outline:0;
}

#reset {
    -webkit-appearance: none; 
    position: relative;
	display: inline-block;
	font-size: 16px;
	padding: 10px 30px 10px 30px;
	color: white;
	margin: 20px 10px 20px 10px;
	border-radius: 6px;
	text-align: center;
	transition: top .01s linear;
	text-shadow: 0 1px 0 rgba(0,0,0,0.15);
    background-color: #cb99c5;
    text-decoration: none;
    outline:0;
	box-shadow: 0 0 0 1px #cb99c5 inset,
				0 0 0 2px rgba(255,255,255,0.15) inset,
				0 8px 0 0 rgba(189, 142, 183, .7),
				0 8px 0 1px rgba(0,0,0,.4),
				0 8px 8px 1px rgba(0,0,0,0.5);
}

#reset:active {
    -webkit-appearance: none; 
	box-shadow: 0 0 0 1px #cb99c5 inset,
				0 0 0 2px rgba(255,255,255,0.15) inset,
                0 0 0 1px rgba(0,0,0,0.4);
    outline:0;
}

